--- a/Waifu2xAvalonia/Views/MainWindow.axaml
+++ b/Waifu2xAvalonia/Views/MainWindow.axaml
@@ -3,18 +3,16 @@
         xmlns:vm="using:Waifu2xAvalonia.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d" d:DesignWidth="300" d:DesignHeight="500" Padding="5"
+        x:CompileBindings="True"
         x:Class="Waifu2xAvalonia.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
-        Icon="/Assets/avalonia-logo.ico"
-        Title="Waifu2xAvalonia">
+        Icon="/Assets/atriangy.ico"
+        Title="Waifu2x">
 
+    <!-- Designer only -->
     <Design.DataContext>
-        <!-- This only sets the DataContext for the previewer in an IDE,
-             to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
         <vm:MainWindowViewModel/>
     </Design.DataContext>
-
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
 </Window>
