--- a/Avalonia/App.axaml
+++ b/Avalonia/App.axaml
@@ -1,11 +1,14 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:gb="using:GroupBox.Avalonia.Controls"
              x:Class="Waifu2x.App"
              xmlns:local="using:Waifu2x"
              xmlns:waifu2X="clr-namespace:Waifu2x"
              RequestedThemeVariant="Default">
-             <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
+    <Application.Resources>
+        <ControlTheme TargetType="gb:GroupBox" x:Key="GroupBoxClassic" />
+    </Application.Resources>
     <Application.DataTemplates>
         <waifu2X:ViewLocator/>
     </Application.DataTemplates>
