--- a/Avalonia/Waifu2x.App/Views/MainWindow.axaml
+++ b/Avalonia/Waifu2x.App/Views/MainWindow.axaml
@@ -2,19 +2,20 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:vm="clr-namespace:Waifu2x.ViewModels"
+        xmlns:vm="clr-namespace:Waifu2x.ViewsModels;assembly=Waifu2x.Core"
         xmlns:v="clr-namespace:Waifu2x.Views"
+        xmlns:viewModels="clr-namespace:Waifu2x.Core.ViewModels;assembly=Waifu2x.Core"
         mc:Ignorable="d" d:DesignWidth="600" d:DesignHeight="700"
         MinWidth="650" MinHeight="700" Padding="2"
         x:CompileBindings="True"
         x:Class="Waifu2x.Views.MainWindow"
-        x:DataType="vm:MainWindowViewModel"
+        x:DataType="viewModels:MainWindowViewModel"
         Icon="/Assets/atriangy.ico"
-        Title="Waifu2x">
+        Title="Waifu2x.App">
 
     <!-- Designer only -->
     <Design.DataContext>
-        <vm:MainWindowViewModel/>
+        <viewModels:MainWindowViewModel/>
     </Design.DataContext>
 
     <DockPanel Name="Root" Margin="5" >
