--- a/Avalonia/Waifu2x.App/App.axaml
+++ b/Avalonia/Waifu2x.App/App.axaml
@@ -1,15 +1,16 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:gb="using:GroupBox.Avalonia.Controls"
+             xmlns:n="clr-namespace:Waifu2x"
              x:Class="Waifu2x.App"
-             xmlns:waifu2X="clr-namespace:Waifu2x"
              RequestedThemeVariant="Default">
 
     <Application.Resources>
         <ControlTheme TargetType="gb:GroupBox" x:Key="GroupBoxClassic" />
     </Application.Resources>
+
     <Application.DataTemplates>
-        <waifu2X:ViewLocator/>
+        <n:ViewLocator/>
     </Application.DataTemplates>
 
     <Application.Styles>
