Add settings persistence

--- a/Avalonia/Waifu2x.App/Views/MainWindow.axaml
+++ b/Avalonia/Waifu2x.App/Views/MainWindow.axaml
@@ -10,7 +10,7 @@
         x:Class="Waifu2x.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
         Icon="/Assets/atriangy.ico"
-        Title="Waifu2x.App">
+        Title="Waifu2x">
 
     <!-- Designer only -->
     <Design.DataContext>
@@ -26,13 +26,14 @@
                 <!-- File/Folder selector -->
                 <TextBlock Text="Input Type" Padding="5" />
                 <StackPanel Orientation="Horizontal" Spacing="10" Margin="5 0">
-                    <RadioButton GroupName="InputType" Content="Folder" IsChecked="{Binding IsFolder}" />
-                    <RadioButton GroupName="InputType" Content="Files" />
+                    <RadioButton Name="IsFolder" GroupName="InputType" Content="Folder"
+                                 IsChecked="{Binding IsFolder}" />
+                    <RadioButton Name="IsFile" GroupName="InputType" Content="Files" />
                 </StackPanel>
 
                 <!-- File/Folder input field -->
                 <TextBlock Text="Input" Padding="5" />
-                <TextBox Text="{Binding InputPath}">
+                <TextBox Name="Input" Text="{Binding InputPath}">
                     <TextBox.InnerLeftContent>
                         <Button Content="Browse" Command="{Binding BrowseCommand}" />
                     </TextBox.InnerLeftContent>
@@ -40,7 +41,7 @@
 
                 <!-- Output suffix field -->
                 <TextBlock Text="Output Suffix" Padding="5" />
-                <TextBox Text="{Binding OutputSuffix}" />
+                <TextBox Name="OutputSuffix" Text="{Binding OutputSuffix}" />
             </StackPanel>
         </gb:GroupBox>
 
@@ -55,6 +56,7 @@
                 <TextBlock Grid.Row="0" Grid.Column="0"
                            Text="Scale" Margin="5" />
                 <ComboBox Grid.Row="1" Grid.Column="0"
+                          Name="Scale"
                           ItemsSource="{Binding ScaleFactors}"
                           SelectedItem="{Binding Scale}"
                           Width="180" Margin="5 0" />
@@ -63,6 +65,7 @@
                 <TextBlock Grid.Row="0" Grid.Column="1"
                            Text="Denoise Level" Margin="5" />
                 <ComboBox Grid.Row="1" Grid.Column="1"
+                          Name="DenoiseLevel"
                           ItemsSource="{Binding DenoiseLevels}"
                           SelectedIndex="{Binding DenoiseLevel}"
                           Width="180" Margin="5 0" />
@@ -71,6 +74,7 @@
                 <TextBlock Grid.Row="0" Grid.Column="2"
                            Text="Format" Margin="5" />
                 <ComboBox Grid.Row="1" Grid.Column="2"
+                          Name="Format"
                           ItemsSource="{Binding OutputFormats}"
                           SelectedItem="{Binding Format}"
                           Width="180" Margin="5 0" />
@@ -79,6 +83,7 @@
                 <TextBlock Grid.Row="2" Grid.Column="0"
                            Text="Decode Threads" Margin="5" />
                 <NumericUpDown Grid.Row="3" Grid.Column="0"
+                               Name="DecodeThreads"
                                Increment="1" Minimum="1"
                                FormatString="N0" ParsingNumberStyle="Integer"
                                Value="{Binding DecodeThreads}"
@@ -89,6 +94,7 @@
                 <TextBlock Grid.Row="2" Grid.Column="1"
                            Text="Upscale Threads" Margin="5" />
                 <NumericUpDown Grid.Row="3" Grid.Column="1"
+                               Name="UpscaleThreads"
                                Increment="1" Minimum="1"
                                FormatString="N0" ParsingNumberStyle="Integer"
                                Value="{Binding UpscaleThreads}"
@@ -99,17 +105,20 @@
                 <TextBlock Grid.Row="2" Grid.Column="2"
                            Text="Encode Threads" Margin="5" />
                 <NumericUpDown Grid.Row="3" Grid.Column="2"
+                               Name="EncodeThreads"
                                Increment="1" Minimum="1"
                                FormatString="N0" ParsingNumberStyle="Integer"
                                Value="{Binding EncodeThreads}"
                                HorizontalAlignment="Left"
                                Width="180" Margin="5 0" />
 
-                <!-- Che ckboxes -->
+                <!-- Checkboxes -->
                 <CheckBox Grid.Row="4" Grid.Column="0"
+                          Name="Grayscale"
                           IsChecked="{Binding Grayscale}"
                           Content="Convert to Grayscale" Margin="5" />
                 <CheckBox Grid.Row="4" Grid.Column="1"
+                          Name="TtaMode"
                           IsChecked="{Binding TtaMode}"
                           Content="TTA Mode" Margin="5" />
             </Grid>
